# objects-in-scenes

./: README.md  pyproject.toml
objects_in_scenes/: main.py
objects_in_scenes/model/: __init__.py
tests/: test_objects_in_scenes.py
