[tool.poetry]
name = "objects-in-scenes"
version = "0.1.0"
description = ""
authors = ["Steven-Yiran <60683228+Steven-Yiran@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "3.9"
tensorflow = "^2.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
